# cersei

./: .gitignore  CHANGELOG.md  Cargo.toml  MEMORY.md  README.md  register_cli.sh  tools.example.yaml
.cargo/: config.toml
crates/abstract-cli/: Cargo.toml
crates/abstract-cli/benchmarks/: memory_bench.rs
crates/abstract-cli/examples/: google_switch_smoke.rs
crates/abstract-cli/src/: agent_filter.rs  app.rs  config.rs  input.rs  lib.rs  login.rs  main.rs  memory_tools.rs  network_policy.rs  permissions.rs  prompt.rs  render.rs  repl.rs  reviewer.rs  sessions.rs  signals.rs  terminal_input.rs  theme.rs  tools_config.rs
crates/abstract-cli/src/commands/: changes.rs  checkpoint.rs  clear.rs  compact.rs  effort.rs  help.rs  mod.rs  model.rs  provider.rs  resume.rs  review.rs  rollback.rs  save.rs  tools.rs
crates/abstract-cli/tests/: memory_tools_test.rs
crates/cersei-agent/: Cargo.toml
crates/cersei-agent/src/: agent_tool.rs  auto_dream.rs  compact.rs  context_analyzer.rs  coordinator.rs  lib.rs  runner.rs  system_prompt.rs
crates/cersei-hooks/src/: lib.rs
crates/cersei-memory/: Cargo.toml
crates/cersei-memory/src/: graph.rs  graph_migrate.rs  lib.rs  memdir.rs  session_storage.rs
crates/cersei-provider/src/: anthropic.rs  lib.rs  openai.rs  registry.rs  router.rs  stream.rs
crates/cersei-tools/: Cargo.toml
crates/cersei-tools/src/: audit_tool.rs  bash.rs  browser_tool.rs  cargo_tool.rs  cas.rs  config_tool.rs  cron.rs  docker_compose_tool.rs  docker_exec_tool.rs  docker_tool.rs  file_edit.rs  file_history.rs  file_history_tool.rs  file_read.rs  file_tool.rs  file_write.rs  file_xedit.rs  file_xgrep.rs  file_xmultigrep.rs  file_xmultiread.rs  file_xread.rs  file_xrevert.rs  file_xwrite.rs  git_tool.rs  git_utils.rs  glob_tool.rs  grep_tool.rs  lib.rs  list_directory.rs  mysql_tool.rs  network_policy.rs  notebook_edit.rs  npm_tool.rs  npx_tool.rs  pdf_tool.rs  permissions.rs  plan_mode.rs  postgres_tool.rs  process_tool.rs  pytest_tool.rs  (+16 more)
crates/cersei-tools/src/skills/: bundled.rs  discovery.rs  mod.rs
crates/cersei-tools/tests/: nudge_test.rs
crates/cersei-tools/tests/fixtures/: Spreadsheet.xls  Spreadsheet.xlsx
crates/cersei-types/src/: lib.rs
crates/wasm_tests/: Cargo.toml
crates/wasm_tests/.cargo/: config.toml
crates/wasm_tests/src/: lib.rs  main.rs
data/: Spreadsheet.ods
docs/content/docs/: abstract-commands.mdx  abstract.mdx  api-agent.mdx  api-tools.mdx  api-types.mdx  index.mdx  meta.json  providers.mdx
examples/: benchmark_io.rs  coding_agent.rs  custom_provider.rs  streaming_events.rs  stress_core_infrastructure.rs  stress_orchestration.rs  stress_skills.rs  stress_tools.rs  usage_report.rs
examples/benchmark/src/: main.rs
src/: main.rs
wiki/: 02-providers.md  03-tools.md  04-agent-lifecycle.md  09-architecture.md
