[package]
name = "cersei-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cersei CLI coding agent"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "cersei"
autoexamples = false

[[bin]]
name = "cersei"
path = "src/main.rs"

[workspace]
resolver = "2"
exclude = ["examples/benchmark"]
members = [
    ".",
    "crates/cersei",
    "crates/cersei-types",
    "crates/cersei-provider",
    "crates/cersei-tools",
    "crates/cersei-tools-derive",
    "crates/cersei-agent",
    "crates/cersei-memory",
    "crates/cersei-hooks",
    "crates/cersei-mcp",
    "crates/abstract-cli",
    "wasm_test",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Adib Mohsin"]
license = "MIT"
description = "A modular Rust SDK for building coding agents"
repository = "https://github.com/pacifio/cersei"
homepage = "https://github.com/pacifio/cersei"
keywords = ["ai", "agent", "coding", "llm", "tools"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"], default-features = false }
reqwest-eventsource = "0.6"
mysql = "28"
postgres = "0.19"
chromiumoxide = "0.9.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.23"
toml = "0.8"
toml_edit = "0.25.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
base64 = "0.22"
blake3 = "1"
sha2 = "0.10"
url = "2"

# Text processing
similar = "2"
unicode-width = "0.2"

# HTML processing
html2text = "0.12"

# Process execution
nix = { version = "0.29", features = ["process", "signal", "user"] }

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# Computer Algebra System
giacrs = "0.1.3"

# Git
gix = { version = "0.81.0", features = ["status", "revision", "blob-diff"] }

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
rustpython-parser = "0.4.0"

# Workspace crates
cersei-types = { path = "crates/cersei-types" }
cersei-provider = { path = "crates/cersei-provider" }
cersei-tools = { path = "crates/cersei-tools" }
cersei-tools-derive = { path = "crates/cersei-tools-derive" }
cersei-agent = { path = "crates/cersei-agent" }
cersei-memory = { path = "crates/cersei-memory" }
cersei-hooks = { path = "crates/cersei-hooks" }
cersei-mcp = { path = "crates/cersei-mcp" }
#wasm_tests = { path = "crates/wasm_tests" }

[features]
default = ["cas"]
cas = ["abstract-cli/cas"]

[dependencies]
abstract-cli = { path = "crates/abstract-cli" }
anyhow = { workspace = true }
tokio = { workspace = true }

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
