[package]
name = "cersei-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool trait, built-in tools, and permission system for the Cersei SDK"

[dependencies]
cersei-types = { workspace = true }
cersei-mcp = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
#wasm_tests = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
similar = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
html2text = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
mysql = { workspace = true }
postgres = { workspace = true }
url = { workspace = true }
chromiumoxide = { workspace = true }
giacrs = { workspace = true, optional = true }
gix = { workspace = true }
syn = { version = "2", features = ["full"] }
quote = "1"
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
rustpython-parser = { workspace = true }
cargo_metadata = "0.19"

[features]
cas = ["giacrs"]

[dev-dependencies]
serde-saphyr = { workspace = true }
